test/libsolidity/syntaxTests/nameAndTypeResolution/366_invalid_array_as_statement.sol
contract test {
    struct S { uint x; }
    constructor(uint k) public { S[k]; }
}
// ----
// TypeError 3940: (76-77): Integer constant expected.
